traces/bug_252.txt
examples++-load/DxWriter.cpp:208: error: DEAD_STORE
  The value written to &stsize (type int) is never used.
Showing all 1 steps of the trace


examples++-load/DxWriter.cpp:208:5: Write of unused value
206.       int nbofsol;
207.       int ddim=2;
208.       int stsize=3;
           ^
209.   		//There's no named parameter
210.       args.SetNameParam();
